# ipc_synchronization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  orchestrator.c  shared_memory_reader.c  shared_memory_writer.c
